<resources>
    <string name="app_name">Unleash</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="action_refresh">Atualizar</string>

    <string name="sell">Venda:</string>
    <string name="buy">Compra:</string>
    <string name="low">Mínimo:</string>
    <string name="high">Máximo:</string>
    <string name="last_txt">Preço unitário do último negócio</string>
    <string name="label_vol">Volume negociado(24h):</string>
    <string name="preco">Preço:</string>
    <string name="quantidade">Quantidade:</string>
    <string name="appwidget_text">Bitcoin Price</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="buy_operation">buy operation</string>
    <string name="sell_operation">sell operation</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Dados e sincronização</string>

    <string name="pref_title_sync_frequency">Frequencia de sincronização</string>
    <string name="ticker">Ticker</string>
    <string name="orderbook">Orderbook</string>
    <string name="negociacoes">Negociações</string>
    <string name="confiiguracao">Configuração</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="enviar_cotacao">Enviar cotação</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>3 horas</item>
        <item>6 horas</item>
        <item>Nunca</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="exchanges_array">
        <item>Mercado Bitcoin</item>
        <item>Foxbit</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="acesso_internet">Parece que você está sem acesso a internet.</string>
    <string name="txt_acesso_cotacoes">Este aplicativo precisa conectar-se a um serviço na internet para obter cotações</string>
    <string name="txt_erro">Oops!</string>
    <string name="communicate">Compartilhar</string>
    <string name="unleash_bitcoin_tracker">Unleash Bitcoin Tracker</string>
    <string name="btc">BTC: </string>
    <string name="real_brasileiro">R$ </string>
    <string name="title_activity_login">Entrar </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (obrigatório)</string>
    <string name="action_sign_in">Registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">O email digitado é inválido</string>
    <string name="error_invalid_password">Esta senha é muito pequena</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Permissões de acesso a contatos são necessárias."
    </string>
    <string name="action_log_in">Enrar</string>
    <string name="action_log_out">Sair</string>
    <string name="stop_loss">Stop Loss</string>
    <string name="exchanges">Exchanges</string>
    <string name="auth_fail">Falha na autenticação</string>
    <string name="salvar">Salvar</string>
    <string name="erro_valor_zero">Valor maior que zero necessário</string>
    <string name="esqueci_minha_senha">Esqueci Minha senha</string>
</resources>
