<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tech.linard.android.unleash.fragments.WelcomeFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_erro"
            android:textAppearance="@style/Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:text="@string/acesso_internet"
            android:layout_width="339dp"
            android:layout_height="31dp"
            android:id="@+id/textView2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            tools:layout_editor_absoluteY="63dp"
            tools:layout_editor_absoluteX="9dp" />

        <TextView
            android:text="@string/txt_acesso_cotacoes"
            android:layout_width="338dp"
            android:layout_height="53dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            tools:layout_editor_absoluteY="92dp"
            tools:layout_editor_absoluteX="11dp" />
    </android.support.constraint.ConstraintLayout>


</FrameLayout>
