<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tech.linard.android.unleash.fragments.MainFragment">

    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/main_high_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high" />
            <TextView
                android:id="@+id/main_low_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low" />
            <TextView
                android:id="@+id/main_buy_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy" />
            <TextView
                android:id="@+id/main_sell_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell" />

            <TextView
                android:id="@+id/main_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/main_high_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp" />
            <TextView
                android:id="@+id/main_low_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp" />
            <TextView
                android:id="@+id/main_buy_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp" />
            <TextView
                android:id="@+id/main_sell_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp" />

            <TextView
                android:id="@+id/main_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
